# mayavius

./: .gitignore  LICENSE  Makefile  README.md
backend/: .env.example  README.md  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/adapters/: __init__.py  combo.py  cotracker3_adapter.py  fixture_adapter.py  open_d4rt_adapter.py  pi3_adapter.py  registry.py  spatialtracker_adapter.py  vggt_adapter.py
backend/app/api/: __init__.py  deps.py  errors.py  sse.py
backend/app/api/routes/: jobs.py
backend/app/core/: __init__.py
backend/app/core/domain/: __init__.py  errors.py  models.py
backend/app/core/ports/: __init__.py  reconstruction_port.py
backend/app/jobs/: __init__.py  queue.py
backend/app/pipeline/: assemble.py  decode.py  lift.py  quantize.py
backend/app/wire/: __init__.py  decoder.py  encoder.py
backend/scripts/: bake_corpus.py
backend/tests/: test_corpus.py  test_health.py
backend/tests/adapters/: test_optional_adapters.py  test_track_lift_roundtrip.py
backend/tests/api/: conftest.py  test_jobs.py
backend/tests/core/: test_caps.py  test_hexagonal_import.py  test_port_service.py
backend/tests/fakes/: fake_adapter.py
backend/tests/fixtures/: golden_scene.mv4d
backend/tests/jobs/: test_queue.py
backend/tests/mps/: test_mps_smoke.py
backend/tests/pipeline/: _gen_tiny_mp4.py  test_frame_budget.py  test_pipeline.py
backend/tests/wire/: _gen_fixtures.py  _golden.py  test_encode.py  test_golden.py  test_version_parity.py
frontend/: .env.example  (+6 more)
(+75 files in other folders)
